# nginx-conf-parser

./: pyproject.toml  setup.cfg  setup.py
nginx_conf_parser/: location_context.py  server_context.py
tests/: location_context_test.py  server_context_test.py
