[tool.poetry]
name = "nginx-conf-parser"
version = "0.1.2"
description = "A Python library for parsing Nginx configuration files"
license = "MIT"
authors = [
    'Hamza ESSAYEGH <hamza.essayegh@protonmail.com>'
]
readme = 'README.md'
homepage = "https://github.com/ropable/nginx-conf-parser"
repository = "https://github.com/ropable/nginx-conf-parser"

[tool.poetry.dependencies]
python = "^3.4 || ^3.5 || ^3.6 || ^3.7 || ^3.8 || ^3.9"

[tool.poetry.dev-dependencies]
nose = '^1.3'
coverage = '4.5.2'

[build-system]
requires = [
    'poetry>=0.12',
    'setuptools>=56',
]
build-backend = 'poetry.masonry.api'
